src/objects/Banana_Farmer__c.object
<CustomObject>
    <description>Banana Farmers in CKW 3.0</description>
    <fields>
        <fullName>Activities_done_after_removing_the_corm__c</fullName>
        <description>After removing the corm or underground stem, which of the following is commonly done</description>
        <inlineHelpText>After removing the corm or underground stem, which of the following is commonly done</inlineHelpText>
        <label>Activities done after removing the corm</label>
        <picklist>
            <picklistValues>
                <fullName>Filling spaces with decomposed manure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leave corm attached to daughter plant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Splitting the corm into small to dry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not remove corms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Additional_Sources_of_Household_Revenue__c</fullName>
        <description>In addition to your Banana income, what are the additional sources of revenue for your household?</description>
        <inlineHelpText>In addition to your Banana income, what are the additional sources of revenue for your household?</inlineHelpText>
        <label>Additional Sources of Household Revenue</label>
        <picklist>
            <picklistValues>
                <fullName>1. Other cash crops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Livestock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remittances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>After_Harvest_Activity_on_Stem_Removal__c</fullName>
        <description>When removing banana stems after harvesting banana, which of the following is commonly followed</description>
        <inlineHelpText>When removing banana stems after harvesting banana, which of the following is commonly followed</inlineHelpText>
        <label>After Harvest Activity on Stem Removal</label>
        <picklist>
            <picklistValues>
                <fullName>chop the stem into small pieces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cut the stem at ground level, add soil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leave the stem and remove it later</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Age_of_Biggest_Banana_Garden__c</fullName>
        <description>In general, how old is your biggest banana garden</description>
        <inlineHelpText>In general, how old is your biggest banana garden</inlineHelpText>
        <label>Age of Biggest Banana Garden</label>
        <picklist>
            <picklistValues>
                <fullName>0-1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over 10 years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount_in_UGX_spent_in_herbicides__c</fullName>
        <description>In the last 12 months, what was the total amount you spent in Ugandan shillings for the herbicide(s) used on your Banana garden[s]?</description>
        <inlineHelpText>In the last 12 months, what was the total amount you spent in Ugandan shillings for the herbicide(s) used on your Banana garden[s]?</inlineHelpText>
        <label>Amount in UGX spent in herbicides</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_in_UGX_spent_on_banana_fertilizer__c</fullName>
        <inlineHelpText>In the last 12 months, what was the total amount you spent in Ugandan shillings for the fertilizers used on your Banana garden[s]?</inlineHelpText>
        <label>Amount in UGX spent on banana fertilizer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_No_of_Bunches_Produced_Monthly__c</fullName>
        <description>How many Bunches of banana do you produce on average per month</description>
        <inlineHelpText>How many Bunches of banana do you produce on average per month</inlineHelpText>
        <label>Average No of Bunches Produced Monthly</label>
        <picklist>
            <picklistValues>
                <fullName>less than 10 bunches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-20 bunches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-49 bunches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 bunches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-100 bunches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 100 bunches</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Average_No_of_Bunches_Produced_per_year__c</fullName>
        <label>Average No of Bunches Produced per year</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 200 bunches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200 to 400 bunches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>400 to 480 bunches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>481 to 600 bunches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>601 to 800 bunches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>801 to 1000 bunches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 1000 bunches</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Average_Price_per_Bunch_Sold__c</fullName>
        <label>Average Price per Bunch Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aware_of_negative_effects_of_herbicides__c</fullName>
        <description>Are you a ware of the bad or negative effects associated with use of herbicides to control weeds</description>
        <inlineHelpText>Are you a ware of the bad or negative effects associated with use of herbicides to control weeds</inlineHelpText>
        <label>Aware of negative effects of herbicides</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Banana_Acres_Planted_last_12_months__c</fullName>
        <description>How many acres of banana have you planted in the last 12 months?</description>
        <inlineHelpText>How many acres of banana have you planted in the last 12 months?</inlineHelpText>
        <label>Banana Acres Planted last 12 months</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 1 acre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 acres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-10 acres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 11 acres</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Banana_Fertilizer_Application_Stage__c</fullName>
        <inlineHelpText>At what stage of banana growing do you apply the fertilizers or manure (time of application) on your bananas</inlineHelpText>
        <label>Banana Fertilizer Application Stage</label>
        <picklist>
            <picklistValues>
                <fullName>At planting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2 months after planting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At flowering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After harvesting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Benefits_from_Banana_Farmers_Association__c</fullName>
        <description>What benefits do you get from the Banana farmers&apos; copperative, group or association?</description>
        <inlineHelpText>What benefits do you get from the Banana farmers&apos; copperative, group or association?</inlineHelpText>
        <label>Benefits from Banana Farmers Association</label>
        <picklist>
            <picklistValues>
                <fullName>To obtain training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To obtain information on Banana farming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Better access to inputs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Better access to credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obtain a better price for Banana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Can_easily_detect_pest_disease_attacks__c</fullName>
        <description>Are you able to easily detect particular pest or disease attacks on your Banana plants</description>
        <inlineHelpText>Are you able to easily detect particular pest or disease attacks on your Banana plants</inlineHelpText>
        <label>Can easily detect pest/disease attacks</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Combination_of_weed_control_methods_used__c</fullName>
        <description>What combination of methods of weed control do you use during a given season</description>
        <inlineHelpText>What combination of methods of weed control do you use during a given season</inlineHelpText>
        <label>Combination of weed control methods used</label>
        <picklist>
            <picklistValues>
                <fullName>Slash during the dry season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slash during the rainy season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use herbicides during the rainy season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use herbicides during the dry season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use hand hoe during the dry season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use hand hoe during the rainy season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Commonest_Fertilizer_Manure_Application__c</fullName>
        <inlineHelpText>Which of the following is the most commonly used method when applying fertilizers or manure on your Banana</inlineHelpText>
        <label>Commonest Fertilizer/Manure Application</label>
        <picklist>
            <picklistValues>
                <fullName>Placed around the banana plant/mat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spot application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broad casting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Placed in trenches</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commonest_agrochemical_acquisition_means__c</fullName>
        <description>What is the commonest means of acquisition of fertilizers, herbicides or pesticides that you use on your Banana garden (s)</description>
        <inlineHelpText>What is the commonest means of acquisition of fertilizers, herbicides or pesticides that you use on your Banana garden (s)</inlineHelpText>
        <label>Commonest agrochemical acquisition means</label>
        <picklist>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Given for free</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Get on credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Crops_planted_alongside_banana_last_6_mo__c</fullName>
        <description>In the last 6 months, what crops have you planted alongside the new banana plantation?</description>
        <inlineHelpText>In the last 6 months, what crops have you planted alongside the new banana plantation?</inlineHelpText>
        <label>Crops planted alongside banana last 6 mo</label>
        <picklist>
            <picklistValues>
                <fullName>Coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground nuts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cowpeas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soya bean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vegetables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Do_you_practise_any_on_your_bananas__c</fullName>
        <description>Do you commonly practice any of the following on your banana</description>
        <inlineHelpText>Do you commonly practice any of the following on your banana</inlineHelpText>
        <label>Do you practise any on your bananas?</label>
        <picklist>
            <picklistValues>
                <fullName>Keep harvested bunches in shade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sorting and grading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Name and Price tagging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traceability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Does_Value_Addition_on_Bananas__c</fullName>
        <description>Do you carry out any value addition on your banana especially during the bumper harvest</description>
        <inlineHelpText>Do you carry out any value addition on your banana especially during the bumper harvest</inlineHelpText>
        <label>Does Value Addition on Bananas</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Easily_access_agro_inputs__c</fullName>
        <description>Easily access agro-inputs (fertilizer or manure, pesticides, herbicides and planting materials)</description>
        <inlineHelpText>Easily access agro-inputs (fertilizer or manure, pesticides, herbicides and planting materials)</inlineHelpText>
        <label>Easily access agro-inputs</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engaged_in_Banana_pest_disease_control__c</fullName>
        <label>Engaged in Banana pest &amp; disease control</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engaged_in_Banana_value_addition__c</fullName>
        <label>Engaged in Banana value addition?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engaged_in_Group_production_marketing__c</fullName>
        <label>Engaged in Group production &amp; marketing?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engaged_in_Proper_timely_weed_control__c</fullName>
        <label>Engaged in Proper &amp; timely weed control?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engaged_in_Soil_and_water_conservation__c</fullName>
        <label>Engaged in Soil and water conservation?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engaged_in_Soil_fertility_management__c</fullName>
        <description>Soil fertility management (application of fertilizer or manure)</description>
        <inlineHelpText>Soil fertility management (application of fertilizer or manure)</inlineHelpText>
        <label>Engaged in Soil fertility management?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engaged_in_proper_record_keeping__c</fullName>
        <description>Proper record keeping on banana production and marketing</description>
        <inlineHelpText>Proper record keeping on banana production and marketing</inlineHelpText>
        <label>Engaged in proper record keeping?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engaged_in_propping_banana_plants__c</fullName>
        <inlineHelpText>Providing support for banana plants (propping)</inlineHelpText>
        <label>Engaged in propping banana plants</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engaged_in_pruning_de_leafing__c</fullName>
        <description>Pruning, desuckering, de-leafing, removal of corm and pseudo stems</description>
        <inlineHelpText>Pruning, desuckering, de-leafing, removal of corm and pseudo stems</inlineHelpText>
        <label>Engaged in pruning, de-leafing?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ever_Received_Fertilizer_Usage_Training__c</fullName>
        <description>Have you ever received training in the proper way to apply fertilizer on your banana garden[s]?</description>
        <inlineHelpText>Have you ever received training in the proper way to apply fertilizer on your banana garden[s]?</inlineHelpText>
        <label>Ever Received Fertilizer Usage Training?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fertilizer_application_use_last_12_month__c</fullName>
        <description>In the last 12 months, how many times did you apply fertilizer(s) or manure on your Banana garden[s]?</description>
        <inlineHelpText>In the last 12 months, how many times did you apply fertilizer(s) or manure on your Banana garden[s]?</inlineHelpText>
        <label>Fertilizer application use last 12 month</label>
        <picklist>
            <picklistValues>
                <fullName>Once</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thrice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3 times</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fertilizers_used_on_banana_plantation__c</fullName>
        <inlineHelpText>Which of the following fertilizers do you use on your banana plantation (s)</inlineHelpText>
        <label>Fertilizers used on banana plantation</label>
        <picklist>
            <picklistValues>
                <fullName>CAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NPK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Focus_Farmer__c</fullName>
        <label>Focus Farmer</label>
        <referenceTo>Focus_Farmer__c</referenceTo>
        <relationshipLabel>Banana Farmers</relationshipLabel>
        <relationshipName>Banana_Farmers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Follows_a_particular_fertilizer_plan__c</fullName>
        <description>Do you follow a particular program or plan such as time, type and amount of fertilizer to apply on your banana?</description>
        <inlineHelpText>Do you follow a particular program or plan such as time, type and amount of fertilizer to apply on your banana?</inlineHelpText>
        <label>Follows a particular fertilizer plan?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Herbicides_applicate_rate_last_12_months__c</fullName>
        <description>In the last 12 months, how many times did you apply herbicide(s) on your Banana garden[s]?</description>
        <inlineHelpText>In the last 12 months, how many times did you apply herbicide(s) on your Banana garden[s]?</inlineHelpText>
        <label>Herbicides applicate rate last 12 months</label>
        <picklist>
            <picklistValues>
                <fullName>Once</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thrice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3 times</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_do_you_manage_weeds_on_your_banana__c</fullName>
        <description>How do you manage weeds on your banana garden (s)?</description>
        <inlineHelpText>How do you manage weeds on your banana garden (s)?</inlineHelpText>
        <label>How do you manage weeds on your banana?</label>
        <picklist>
            <picklistValues>
                <fullName>By hand hoeing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use herbicides</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slashing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mulching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animals feeding on the weeds (grazing animals in the banana garden)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A combination of methods above</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_many_times_do_you_weed_Banana_a_year__c</fullName>
        <description>How many times do you weed your banana in a year</description>
        <inlineHelpText>How many times do you weed your banana in a year</inlineHelpText>
        <label>How many times do you weed Banana a year</label>
        <picklist>
            <picklistValues>
                <fullName>Once a year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice a year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thrice a year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3 times in a year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_often_would_you_like_to_get_SMS__c</fullName>
        <description>How often would you like to receive the SMS alerts</description>
        <inlineHelpText>How often would you like to receive the SMS alerts</inlineHelpText>
        <label>How often would you like to get SMS</label>
        <picklist>
            <picklistValues>
                <fullName>Once a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every after 2 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Once a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_to_obtain_quality_agrochemicals__c</fullName>
        <description>How do you ensure that you obtain quality agro-chemicals above (Fertilizers, herbicides and pesticides)</description>
        <inlineHelpText>How do you ensure that you obtain quality agro-chemicals above (Fertilizers, herbicides and pesticides)</inlineHelpText>
        <label>How to obtain quality agrochemicals</label>
        <picklist>
            <picklistValues>
                <fullName>Buy from registered input dealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Just buy from any input dealer (Do not mind where I Buy)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collective purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seek for guidance from fellow farmers/CKW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I call the GF farmer call center for guidance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not use any of these inputs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_you_manage_pests_diseases_in_banana__c</fullName>
        <description>How do you manage pests and diseases in your Banana garden (s)</description>
        <inlineHelpText>How do you manage pests and diseases in your Banana garden (s)</inlineHelpText>
        <label>How you manage pests &amp;diseases in banana</label>
        <picklist>
            <picklistValues>
                <fullName>Spray with chemicals (pesticides)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use local technolgoy/cultural means</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use a combination of methods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical means (e.g. uproot and bury or burn)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Likelihood_of_using_info_provided_by_GF__c</fullName>
        <description>What is the likelihood that if we provide you with the necessary information and or training on selected  practices that you are lacking in Banana production and marketing that you will put them into practice to improve your Banana yields and income</description>
        <inlineHelpText>What is the likelihood that if we provide you with the necessary information and or training on selected  practices that you are lacking in Banana production and marketing that you will put them into practice to improve your Banana yields and income</inlineHelpText>
        <label>Likelihood of using info provided by GF</label>
        <picklist>
            <picklistValues>
                <fullName>Very Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Makes_Informed_Decisions_using_records__c</fullName>
        <description>Do you use Banana production and marketing records to make informed decisions</description>
        <inlineHelpText>Do you use Banana production and marketing records to make informed decisions</inlineHelpText>
        <label>Makes Informed Decisions using records</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>